[gd_scene load_steps=2 format=3 uid="uid://ckkmlgshyjym8"]

[ext_resource type="Script" path="res://scripts/Options.gd" id="1_1o060"]

[node name="Options" type="CenterContainer"]
offset_right = 80.0
offset_bottom = 72.0
mouse_filter = 2
script = ExtResource("1_1o060")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 2
mouse_filter = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_left = 2
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 2
theme_override_constants/margin_bottom = 2

[node name="VBoxContainer" type="GridContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/h_separation = 2
theme_override_constants/v_separation = 1
columns = 2

[node name="FightButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_font_sizes/font_size = 8
text = "Fight"

[node name="SkillButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_font_sizes/font_size = 8
text = "Skill
"

[node name="ItemButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_font_sizes/font_size = 8
text = "Item"

[node name="DefendButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_font_sizes/font_size = 8
text = "Defend"

[node name="WaitButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_font_sizes/font_size = 8
text = "Wait"

[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/FightButton" to="." method="_on_fight_button_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/SkillButton" to="." method="_on_skill_button_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/ItemButton" to="." method="_on_item_button_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/DefendButton" to="." method="_on_defend_button_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/WaitButton" to="." method="_on_wait_button_pressed"]
